Online-Car-Sample/service-passenger/Online-Car-Passenger-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-passenger
spec:
  selector:
    app: service-passenger
  type: ClusterIP
  ports:
  - name: http
    port: 8021
    targetPort: 8021
    protocol: TCP
